// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private - LN - Common - LinkCanonicalAndAlternate At homepage Snapshot link canonical homepage 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/"
    rel="canonical"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonicalAndAlternate At note Snapshot link canonical note 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/ciencia/roger-prueba-imagenes-nid28052020/"
    rel="canonical"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonicalAndAlternate At sections Snapshot link canonical section 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/deportes/"
    rel="canonical"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonicalAndAlternate At sub-sections Snapshot link canonical sub-section 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/deportes/futbol/boca-juniors/"
    rel="canonical"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonicalAndAlternate When parent is estados-unidos Should link canonical and link alternate 1`] = `
<div>
  <link
    href="https://www.lanacion.com.ar/estados-unidos/"
    rel="canonical"
  />
  <link
    href="https://www.lanacion.com.ar/estados-unidos/"
    hreflang="es-US"
    rel="alternate"
  />
</div>
`;

exports[`Private - LN - Common - LinkCanonicalAndAlternate With author id Snapshot link canonical sub-section 1`] = `
<div>
  <link
    href="https://foodit.lanacion.com.ar/leo-messi-10/"
    rel="canonical"
  />
</div>
`;
